--- a/wiki/index.html
+++ b/wiki/index.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>$:/config/RelinkOnRename</li>
 
+<li>$:/config/shortcuts-mac/advanced-search</li>
+
 <li>$:/config/shortcuts-mac/heading-4</li>
 
 <li>$:/config/shortcuts-mac/heading-5</li>
@@ -438,6 +440,8 @@ Error message and password prompt
 <li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/tahoelafs</li>
 
 <li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/text-slicer</li>
+
+<li>$:/state/dropdown/keyboardshortcut/advanced-search-286565879</li>
 
 <li>$:/state/dropdown/keyboardshortcut/excise-286565879</li>
 
@@ -899,6 +903,8 @@ Error message and password prompt
 
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
+<li>$:/temp/tobibeer/preview-1-tiddler</li>
+
 <li>$:/temp/tobibeer/preview-2-tiddler</li>
 
 <li>$:/theme</li>
@@ -965,7 +971,11 @@ Error message and password prompt
 
 <li>Everything is a file</li>
 
+<li>exec</li>
+
 <li>File&amp;IO</li>
+
+<li>fork</li>
 
 <li>Formal language</li>
 
@@ -1121,6 +1131,10 @@ Error message and password prompt
 
 <li>sum type</li>
 
+<li>SystemCalls</li>
+
+<li>SystemProgramming</li>
+
 <li>TableOfContents</li>
 
 <li>thread safe</li>
@@ -1142,6 +1156,8 @@ Error message and password prompt
 <li>Virtualization</li>
 
 <li>Welcome to Stroll</li>
+
+<li>WhyBashCanRunProgram</li>
 
 <li>WorkExperience</li>
 
@@ -2275,6 +2291,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </div>
 <div bag="default" created="20200106214031452" modified="20200626125021978" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
 <pre>no</pre>
+</div>
+<div created="20200702122856585" modified="20200702122856585" title="$:/config/shortcuts-mac/advanced-search">
+<pre>cmd-F</pre>
 </div>
 <div created="20200628155022332" modified="20200628155022332" title="$:/config/shortcuts-mac/heading-4">
 <pre>cmd-4</pre>
@@ -18020,6 +18039,9 @@ exports.context = contextWidget;
 <div created="20200624160517966" modified="20200624160517966" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/text-slicer">
 <pre>yes</pre>
 </div>
+<div created="20200702122851805" modified="20200702122851805" title="$:/state/dropdown/keyboardshortcut/advanced-search-286565879">
+<pre>open</pre>
+</div>
 <div created="20200628154926773" modified="20200629060643185" title="$:/state/dropdown/keyboardshortcut/excise-286565879">
 <pre>close</pre>
 </div>
@@ -18158,8 +18180,8 @@ exports.context = contextWidget;
 <div created="20200502164750943" modified="20200606181418181" title="$:/state/strollhometabs-338615865">
 <pre>A stroll through Stroll</pre>
 </div>
-<div created="20200418122550429" modified="20200628165926544" title="$:/state/tab--1498284803">
-<pre>$:/core/ui/AdvancedSearch/Filter</pre>
+<div created="20200418122550429" modified="20200702122939431" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Standard</pre>
 </div>
 <div created="20200616150438012" modified="20200616150442894" title="$:/state/tab--1638394651">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
@@ -18197,8 +18219,8 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200629170325811" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200629161709464" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200418121928767" modified="20200702122845502" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -18305,8 +18327,8 @@ exports.context = contextWidget;
 <div created="20200625051717805" modified="20200625051849987" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
 <pre>open</pre>
 </div>
-<div created="20200624162111260" modified="20200701130650295" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
-<pre>close</pre>
+<div created="20200624162111260" modified="20200702122356472" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
+<pre>open</pre>
 </div>
 <div created="20200630081640736" modified="20200630081640736" title="$:/state/toc/TableOfContents/Development/OS/Linux-File&amp;IO--118161433">
 <pre>open</pre>
@@ -18371,7 +18393,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="[[Regular expression]] regex OS [[Unbuffered IO]] File&amp;IO LinuxTools Golang" modified="20200702045232557" title="$:/StoryList">
+<div created="20200628163506618" list="PCB Process WhyBashCanRunProgram fork $:/AdvancedSearch $:/ControlPanel Linux SystemProgramming SystemCalls [[Regular expression]] regex OS [[Unbuffered IO]] File&amp;IO LinuxTools Golang" modified="20200702123758739" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18397,8 +18419,8 @@ exports.context = contextWidget;
 <div bag="default" created="20200127144249151" list="$:/core/ui/Buttons/close-others $:/_sq/Stories/divertTiddlerMacro $:/core/ui/Buttons/fold $:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold-bar" modified="20200625045555055" revision="0" tags="$:/giffmex/stroll" title="$:/tags/ViewToolbar" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div created="20200418122547595" modified="20200628165926543" title="$:/temp/advancedsearch">
-<pre>[is[tiddler]is[shadow]sort[title]]</pre>
+<div created="20200418122547595" modified="20200702122949478" title="$:/temp/advancedsearch">
+<pre>pro</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -19423,6 +19445,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
+<div created="20200702123639422" modified="20200702123639422" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>PCB</pre>
+</div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
 </div>
@@ -19764,6 +19789,9 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
+<div created="20200702124631274" modified="20200702124631274" title="exec">
+<pre></pre>
+</div>
 <div created="20200630081448242" modified="20200630081531143" tags="Linux" title="File&amp;IO">
 <pre>[[Linux]]
 &lt;div class=&quot;tc-table-of-contents&quot;&gt;
@@ -19772,6 +19800,36 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 
 &lt;/div&gt;
 </pre>
+</div>
+<div created="20200702123209727" modified="20200702123630865" tags="Process" title="fork">
+<pre>[[Process]]
+
+The entirety of fork() is implemented using mmap / copy on write.
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+fork 给父进程返回子进程 pid，给其拷贝出来的子进程返回 0，这也是他的特点之一，一次调用，两次返回。
+
+两次返回看上去有点神秘，实质是在子进程的栈中构造好数据后，子进程从栈中获取到的返回值。
+
+fork 的实现分为以下两步
+
+1. 复制进程资源
+2. 执行该进程
+
+复制进程的资源包括以下几步
+
+1. 进程 [[PCB]]
+2. 程序体，即代码段数据段等
+3. 用户栈
+4. 内核栈
+5. 虚拟内存池
+6. 页表
+
+进行进程的话就比较简单了，只需要将其加入到就绪队列即可，接下来就等待 cpu 的调度了
+
+&quot;&quot;&quot;
+&lt;/div&gt;</pre>
 </div>
 <div created="20200626102426078" modified="20200629161222986" tags="Development" title="Formal language">
 <pre>In mathematics, computer science, and linguistics, a formal language consists of words whose letters are taken from an alphabet and are well-formed according to a specific set of rules.
@@ -20153,10 +20211,25 @@ Process 8572 detached
 链接：https://www.zhihu.com/question/304752391/answer/699930080
 </pre>
 </div>
-<div created="20200619185106854" modified="20200630084720075" tags="Process" title="PCB">
+<div created="20200619185106854" modified="20200702123912602" tags="Process" title="PCB">
 <pre>
 每个进程在Linux内核中都有一个task_struct结构体来维护进程相关的信息，称为进程描述符（[[Process]]
- Descriptor），而在操作系统理论中称为进程控制块（[[PCB]]，Process Control Block）。task_struct中有一个指针指向files_struct结构体，称为文件描述符表，其中每个表项包含一个指向已打开的文件的指针</pre>
+ Descriptor），而在操作系统理论中称为进程控制块（[[PCB]]，Process Control Block）。task_struct中有一个指针指向files_struct结构体，称为文件描述符表，其中每个表项包含一个指向已打开的文件的指针
+
+* 进程 id。系统中每个进程有唯一的 id，在 C 语言中用 pid_t 类型表示，其实就是一个非负整数。
+* 进程的状态，有运行、挂起、停止、僵尸等状态。
+* 进程切换时需要保存和恢复的一些 CPU 寄存器。
+* 描述虚拟地址空间的信息。
+* 描述控制终端的信息。
+* 当前工作目录（Current Working Directory）。
+* umask 掩码。
+* 文件描述符表，包含很多指向 file 结构体的指针。
+* 和信号相关的信息。
+* 用户 id 和组 id。
+* 控制终端、Session 和进程组。
+* 进程可以使用的资源上限（Resource Limit）。
+
+</pre>
 </div>
 <div created="20200626101940127" modified="20200626102335985" title="PCRE">
 <pre>PCRE - Perl Compatible Regular Expressions
@@ -20177,8 +20250,11 @@ Process 8572 detached
 
 https://www.regular-expressions.info/refadv.html</pre>
 </div>
-<div created="20200630084602979" modified="20200630084620534" tags="Linux" title="Process">
+<div created="20200630084602979" modified="20200702123059332" tags="Linux" title="Process">
 <pre>[[Linux]]
+
+The definition of a process, informally, is quite simple: it is a running program [V+65,BH70]. 
+
 &lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'Process' sort[ind]&gt;&gt;
@@ -20516,6 +20592,20 @@ This is a sum of sets, `Foo=bool+u8`
 . More accurately, it’s a disjoint union, where if the input sets have overlap, the overlap is “discriminated” out.
 </pre>
 </div>
+<div created="20200702122641963" modified="20200702122718898" tags="SystemProgramming" title="SystemCalls">
+<pre>[[SystemProgramming]]
+
+A system call is a controlled entry point into the kernel, allowing a process to request that the kernel perform some action on the process’s behalf. </pre>
+</div>
+<div created="20200702122610174" modified="20200702122640206" tags="Linux" title="SystemProgramming">
+<pre>[[Linux]]
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'SystemProgramming' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
 <div caption="{{$:/language/SideBar/Contents/Caption}}" created="20200623164931845" list-before="$:/core/ui/SideBar/Open" modified="20200623171817140" tags="$:/tags/SideBar" title="TableOfContents" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 &lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
@@ -20686,6 +20776,11 @@ open、read、[[write]]、close等系统函数称为无缓冲I/O（Unbuffered I/
 </div>
 <div bag="default" created="20200128030902225" list="$:/_sq/Stories-overview" modified="20200521174009380" revision="0" tags="$:/giffmex/tutorials" title="Welcome to Stroll" type="text/vnd.tiddlywiki">
 <pre>&lt;&lt;tabs &quot;[[A stroll through Stroll]] [[The TiddlyWiki layout]] [[Using tiddlers]] [[Linking in Stroll, part 1]] [[Linking in Stroll, part 2]] [[Linking in Stroll, part 3]] [[New tiddler linked here]] [[Two columns]] [[Advanced stuff]] [[Troubleshooting]] [[Stroll vs Roam]] [[Recent updates to Stroll]] [[Download Stroll]] [[Updating Stroll]] [[Add Stroll to your TW]] [[Get goodies]] [[Help / Acknowledgments]] [[Help us]]&quot; &quot;[[A stroll through Stroll]]&quot; &quot;$:/state/strollhometabs&quot; &quot;tc-vertical&quot;&gt;&gt;</pre>
+</div>
+<div created="20200702124546562" modified="20200702124631273" tags="Process" title="WhyBashCanRunProgram">
+<pre>
+
+在Shell下输入命令可以运行一个程序，是因为Shell进程在读取用户输入的命令之后会调用[[fork]]复制出一个新的Shell [[Process]]，然后新的Shell进程调用[[exec]]执行新的程序</pre>
 </div>
 <div created="20200624102555223" modified="20200624102614829" tags="Development" title="WorkExperience" type="text/x-markdown">
 <pre></pre>
