--- a/wiki/index.html
+++ b/wiki/index.html
@@ -489,6 +489,10 @@ Error message and password prompt
 
 <li>$:/state/folded/Welcome to Stroll</li>
 
+<li>$:/state/image-picker/system-1787593373</li>
+
+<li>$:/state/Link/--1199587465/search</li>
+
 <li>$:/state/palettemanager/showexternal</li>
 
 <li>$:/state/plugin-info--1537405794-$:/plugins/tiddlywiki/codemirror-keymap-vim---407697173</li>
@@ -564,6 +568,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab-451103385</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
 
@@ -18111,6 +18117,12 @@ exports.context = contextWidget;
 <div created="20200503154024616" modified="20200521151623405" title="$:/state/folded/Welcome to Stroll">
 <pre>show</pre>
 </div>
+<div created="20200702124907732" modified="20200702124908779" title="$:/state/image-picker/system-1787593373">
+<pre>hide</pre>
+</div>
+<div created="20200702124859190" modified="20200702124903879" title="$:/state/Link/--1199587465/search">
+<pre></pre>
+</div>
 <div created="20200616180815419" modified="20200616180817715" title="$:/state/palettemanager/showexternal">
 <pre>no</pre>
 </div>
@@ -18224,6 +18236,9 @@ exports.context = contextWidget;
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
+</div>
+<div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
@@ -20777,10 +20792,12 @@ open、read、[[write]]、close等系统函数称为无缓冲I/O（Unbuffered I/
 <div bag="default" created="20200128030902225" list="$:/_sq/Stories-overview" modified="20200521174009380" revision="0" tags="$:/giffmex/tutorials" title="Welcome to Stroll" type="text/vnd.tiddlywiki">
 <pre>&lt;&lt;tabs &quot;[[A stroll through Stroll]] [[The TiddlyWiki layout]] [[Using tiddlers]] [[Linking in Stroll, part 1]] [[Linking in Stroll, part 2]] [[Linking in Stroll, part 3]] [[New tiddler linked here]] [[Two columns]] [[Advanced stuff]] [[Troubleshooting]] [[Stroll vs Roam]] [[Recent updates to Stroll]] [[Download Stroll]] [[Updating Stroll]] [[Add Stroll to your TW]] [[Get goodies]] [[Help / Acknowledgments]] [[Help us]]&quot; &quot;[[A stroll through Stroll]]&quot; &quot;$:/state/strollhometabs&quot; &quot;tc-vertical&quot;&gt;&gt;</pre>
 </div>
-<div created="20200702124546562" modified="20200702124631273" tags="Process" title="WhyBashCanRunProgram">
+<div created="20200702124546562" modified="20200702124954381" tags="Process" title="WhyBashCanRunProgram">
 <pre>
 
-在Shell下输入命令可以运行一个程序，是因为Shell进程在读取用户输入的命令之后会调用[[fork]]复制出一个新的Shell [[Process]]，然后新的Shell进程调用[[exec]]执行新的程序</pre>
+在Shell下输入命令可以运行一个程序，是因为Shell进程在读取用户输入的命令之后会调用[[fork]]复制出一个新的Shell [[Process]]，然后新的Shell进程调用[[exec]]执行新的程序
+
+[img[http://akaedu.github.io/book/images/process.forkexec.png]]</pre>
 </div>
 <div created="20200624102555223" modified="20200624102614829" tags="Development" title="WorkExperience" type="text/x-markdown">
 <pre></pre>
