--- a/wiki/index.html
+++ b/wiki/index.html
@@ -18245,8 +18245,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200702125131153" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200418121835270" modified="20200702162521282" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18326,8 +18326,8 @@ exports.context = contextWidget;
 <div created="20200626103456082" modified="20200701130448230" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
 <pre>close</pre>
 </div>
-<div created="20200626103950075" modified="20200627161245746" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
-<pre>open</pre>
+<div created="20200626103950075" modified="20200702162523869" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
+<pre>close</pre>
 </div>
 <div created="20200626103456783" modified="20200626103456783" title="$:/state/toc/TableOfContents/Development/Formal language/Programming language-Golang--118161433">
 <pre>open</pre>
@@ -18410,7 +18410,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="fork $:/AdvancedSearch Process [[Environment variables]] exec" modified="20200702160124583" title="$:/StoryList">
+<div created="20200628163506618" list="fork $:/AdvancedSearch Process [[Environment variables]] exec" modified="20200702161134081" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18436,8 +18436,8 @@ exports.context = contextWidget;
 <div bag="default" created="20200127144249151" list="$:/core/ui/Buttons/close-others $:/_sq/Stories/divertTiddlerMacro $:/core/ui/Buttons/fold $:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold-bar" modified="20200625045555055" revision="0" tags="$:/giffmex/stroll" title="$:/tags/ViewToolbar" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div created="20200418122547595" modified="20200702160122646" title="$:/temp/advancedsearch">
-<pre>fork</pre>
+<div created="20200418122547595" modified="20200702161151108" title="$:/temp/advancedsearch">
+<pre>exec</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -19855,8 +19855,18 @@ LANG
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
-<div created="20200702124631274" modified="20200702124631274" title="exec">
-<pre></pre>
+<div created="20200702124631274" modified="20200702162319144" tags="Process" title="exec">
+<pre>&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+&gt; The exec() family of functions replaces the current [[Process]] image with a new process image.
+
+用fork创建子进程后执行的是和父进程相同的程序（但有可能执行不同的代码分支），子进程往往要调用一种exec函数以执行另一个程序。当进程调用一种exec函数时，该进程的用户空间代码和数据完全被新程序替换，从新程序的启动例程开始执行。调用exec并不创建新进程，所以调用exec前后该进程的id并未改变。
+
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+调用exec后，原来打开的文件描述符仍然是打开的[37]。利用这一点可以实现I/O重定向。</pre>
 </div>
 <div created="20200630081448242" modified="20200630081531143" tags="Linux" title="File&amp;IO">
 <pre>[[Linux]]
@@ -19867,7 +19877,7 @@ LANG
 &lt;/div&gt;
 </pre>
 </div>
-<div created="20200702123209727" modified="20200702160215119" tags="Process" title="fork">
+<div created="20200702123209727" modified="20200702161005075" tags="Process" title="fork">
 <pre>[[Process]]
 
 The entirety of fork() is implemented using mmap / copy on write.
@@ -19879,12 +19889,10 @@ fork 给父进程返回子进程 pid，给其拷贝出来的子进程返回 0，
 两次返回看上去有点神秘，实质是在子进程的栈中构造好数据后，子进程从栈中获取到的返回值。
 
 fork 的实现分为以下两步
-
 1. 复制进程资源
 2. 执行该进程
 
 复制进程的资源包括以下几步
-
 1. 进程 [[PCB]]
 2. 程序体，即代码段数据段等
 3. 用户栈
@@ -19899,7 +19907,27 @@ fork 的实现分为以下两步
 
 [[进程控制|http://akaedu.github.io/book/ch30s03.html]]
 
-&gt; 这个程序是在Shell下运行的，因此Shell进程是父进程的父进程。父进程运行时Shell进程处于等待状态（第 3.3 节 “wait和waitpid函数”会讲到这种等待是怎么实现的），当父进程终止时Shell进程认为命令执行结束了，于是打印Shell提示符，而事实上子进程这时还没结束，所以子进程的消息打印到了Shell提示符后面。最后光标停在This is the child的下一行，这时用户仍然可以敲命令，即使命令不是紧跟在提示符后面，Shell也能正确读取。</pre>
+
+&gt; 这个程序是在Shell下运行的，因此Shell进程是父进程的父进程。父进程运行时Shell进程处于等待状态（第 3.3 节 “wait和waitpid函数”会讲到这种等待是怎么实现的），当父进程终止时Shell进程认为命令执行结束了，于是打印Shell提示符，而事实上子进程这时还没结束，所以子进程的消息打印到了Shell提示符后面。最后光标停在This is the child的下一行，这时用户仍然可以敲命令，即使命令不是紧跟在提示符后面，Shell也能正确读取。
+
+!!  why fork return Child pid
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+子进程中fork的返回值是0，而父进程中fork的返回值则是子进程的id（从根本上说fork是从内核返回的，内核自有办法让父进程和子进程返回不同的值）
+程和子进程执行不同的代码。
+
+fork的返回值这样规定是有道理的。fork在子进程中返回0，子进程仍可以调用getpid函数得到自己的进程id，也可以调用getppid函数得到父进程的id。在父进程中用getpid可以得到自己的进程id，然而要想得到子进程的id，只有将fork的返回值记录下来，别无它法。
+
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+!! fork's [[File&amp;IO]]
+fork的另一个特性是所有由父进程打开的描述符都被复制到子进程中。父、子进程中相同编号的文件描述符在内核中指向同一个file结构体，也就是说，file结构体的引用计数要增加。
+
+用 [[GDB]] 调试多进程的程序会遇到困难，gdb只能跟踪一个进程（默认是跟踪父进程），而不能同时跟踪多个进程，但可以设置gdb在fork之后跟踪父进程还是子进程。以上面的程序为例：
+
+set follow-fork-mode child命令设置gdb在fork之后跟踪子进程（set follow-fork-mode parent则是跟踪父进程）</pre>
 </div>
 <div created="20200626102426078" modified="20200629161222986" tags="Development" title="Formal language">
 <pre>In mathematics, computer science, and linguistics, a formal language consists of words whose letters are taken from an alphabet and are well-formed according to a specific set of rules.
