--- a/wiki/index.html
+++ b/wiki/index.html
@@ -503,6 +503,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--795648560-$:/plugins/tobibeer/appear--448029843</li>
 
+<li>$:/state/plugin-info--896887961-$:/plugins/danielo515/autotag</li>
+
 <li>$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin--1816349830</li>
@@ -1805,8 +1807,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20170615081040584" modified="20200504143613685" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200619183447964" modified="20200619185217096" title="$:/config/AutoSave">
-<pre>no</pre>
+<div created="20200619183447964" modified="20200703172630965" title="$:/config/AutoSave">
+<pre>yes</pre>
 </div>
 <div created="20200628154859021" modified="20200628154859021" title="$:/config/codemirror/keyMap" type="string">
 <pre>vim
@@ -17730,6 +17732,9 @@ exports.context = contextWidget;
 <div created="20200629161806123" modified="20200629161806123" title="$:/state/plugin-info--795648560-$:/plugins/tobibeer/appear--448029843">
 <pre>contents</pre>
 </div>
+<div created="20200703172716740" modified="20200703172718101" title="$:/state/plugin-info--896887961-$:/plugins/danielo515/autotag">
+<pre>no</pre>
+</div>
 <div created="20200629161813288" modified="20200629161817369" title="$:/state/plugin-info--896887961-$:/plugins/danielo515/ContextPlugin">
 <pre>no</pre>
 </div>
@@ -17820,11 +17825,11 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200629170325811" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200703170732662" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200418121928767" modified="20200703172712816" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20200616144657561" modified="20200703170747082" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
+<div created="20200616144657561" modified="20200703172708966" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18003,7 +18008,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200703170724377" list="[[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200703171615220" title="$:/StoryList">
+<div created="20200703170724377" list="[[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200703172728670" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
